--- a/.github/workflows/build-livecd.yml
+++ b/.github/workflows/build-livecd.yml
@@ -67,7 +67,6 @@ jobs:
           xfsprogs
           f2fs-tools
           jfsutils
-          reiserfsprogs
 
           # Network
           networkmanager
@@ -87,7 +86,6 @@ jobs:
           xf86-video-amdgpu
           xf86-video-nouveau
           xf86-video-ati
-          xf86-video-vmware
           xf86-video-vesa
           xf86-input-libinput
 
@@ -116,7 +114,7 @@ jobs:
           # System tools
           firefox
           htop
-          neofetch
+          fastfetch
           git
           vim
           nano
@@ -141,7 +139,6 @@ jobs:
           gparted
           testdisk
           ddrescue
-          clonezilla
 
           # Additional utilities
           sudo
